--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <a href="Game.html">GAMES</a>
             </button>
             <button>
-                <a href="Softwares.html">SOFTWARES</a>
+                <a href="softwares.html">SOFTWARES</a>
             </button>
             <button>
                 <a href="Movies.html">MOVIES</a>
