--- a/anime.html
+++ b/anime.html
@@ -5,8 +5,10 @@
     <style>
         body {
             color: white;
-            margin: 100;
+            margin: 0; /* Reset margin to remove extra space around the body */
+            padding: 0; /* Reset padding to remove extra space around the body */
             min-height: 100vh;
+            background-color: #111; /* Added background color for better visibility */
         }
         .menu {
             text-align: center;
@@ -68,6 +70,10 @@
             right: 20px;
             top: 20px;
         }
+        /* Added margin-top to move the content down */
+        .menu-content {
+            margin-top: 150px; /* Adjust this value as needed */
+        }
     </style>
 </head>
 <body>
@@ -84,51 +90,51 @@
         </a>
     </div>
     <div class="menu">
-        <h1>Watch Anime Online</h1>
-        <ul id="categoryList">
-            <li>
-                <a href="https://oke.io/U8rfp" target="_blank">
-                    <img src="kissanime.png" alt="Kissanime Image">
-                </a>
-            </li>
-            <li>
-                <a href="https://oke.io/jBAf" target="_blank">
-                    <img src="gogoanime.png" alt="gogoanime">
-                </a>
-            </li>
-            <li>
-                <a href="https://oke.io/0OAP8Ja" target="_blank">
-                    <img src="kickassanime.png" alt="kickassanime">
-                </a>
-            </li>
-        </ul>
-    </div>
-    <div class="menu">
-        <h1>  Download and Watch</h1>
-        <ul id="categoryList">
-            <li>
-                <a href="https://oke.io/NMiWYz5e" target="_blank">
-                    <img src="ripcrabbyanime.png" alt="ripcrabbyanime">
-                </a>
-            </li>
-            <li>
-                <a href="https://oke.io/XHd2p" target="_blank">
-                    <img src="kayoanime.png" alt="kayoanime">
-                </a>
-            </li>
-        </ul>
-        <p class="disclaimer">
-            Disclaimer: This website provides links to external websites that are not owned or operated by us,
-        </p>
-        <p class="disclaimer">We are not responsible for the content or availability of these websites, and including these links does not imply endorsement or affiliation with the linked websites.</p>
-        <i class="italic-text">Join our Telegram channel for Further help</i>
-        <p><i class="italic-text">Click the Link below to join</i></p>
+        <div class="menu-content"> <!-- Added a container for the content -->
+            <h1>Watch Anime Online</h1>
+            <ul id="categoryList">
+                <li>
+                    <a href="https://oke.io/U8rfp" target="_blank">
+                        <img src="kissanime.png" alt="Kissanime Image">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://oke.io/jBAf" target="_blank">
+                        <img src="gogoanime.png" alt="gogoanime">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://oke.io/0OAP8Ja" target="_blank">
+                        <img src="kickassanime.png" alt="kickassanime">
+                    </a>
+                </li>
+            </ul>
+            <h1>Download and Watch</h1>
+            <ul id="categoryList">
+                <li>
+                    <a href="https://oke.io/NMiWYz5e" target="_blank">
+                        <img src="ripcrabbyanime.png" alt="ripcrabbyanime">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://oke.io/XHd2p" target="_blank">
+                        <img src="kayoanime.png" alt="kayoanime">
+                    </a>
+                </li>
+            </ul>
+            <p class="disclaimer">
+                Disclaimer: This website provides links to external websites that are not owned or operated by us,
+            </p>
+            <p class="disclaimer">We are not responsible for the content or availability of these websites, and including these links does not imply endorsement or affiliation with the linked websites.</p>
+            <i class="italic-text">Join our Telegram channel for Further help</i>
+            <p><i class="italic-text">Click the Link below to join</i></p>
 
-        <li>
-            <a href="https://oke.io/mpBW7ot" target="_blank">
-                <img src="join.jpg" alt="telegram">
-            </a>
-        </li>
-        </div>    
-   </body>
+            <li>
+                <a href="https://oke.io/mpBW7ot" target="_blank">
+                    <img src="join.jpg" alt="telegram">
+                </a>
+            </li>
+        </div>
+    </div>
+</body>
 </html>
