--- a/gamedownloadlist.html
+++ b/gamedownloadlist.html
@@ -62,13 +62,13 @@
 <body>
     <!-- Top left button -->
     <div class="top-left-button">
-        <a href="https://oke.io/mpBW7ot" target="_blank">
+        <a href="https://t.me/+HEK1QwXT4qkxMDk1" target="_blank">
             <img src="join.jpg" alt="telegram">
         </a>
     </div>
     <!-- Top right button -->
     <div class="top-right-button">
-        <a href="https://oke.io/mpBW7ot" target="_blank">
+        <a href="https://t.me/+HEK1QwXT4qkxMDk1" target="_blank">
             <img src="join.jpg" alt="telegram">
         </a>
     </div>
@@ -127,7 +127,7 @@
     <i class="italic-text">Join our Telegram channel for Further help</i>
     <p><i class="italic-text">Click the Link below to join</i></p>
     <li>
-        <a href="https://oke.io/mpBW7ot" target="_blank">
+        <a href="https://t.me/+HEK1QwXT4qkxMDk1" target="_blank">
             <img src="join.jpg" alt="telegram">
         </a>
     </li>
